hopefully fix mobile selector bar overflow

--- a/styles_p1a.css
+++ b/styles_p1a.css
@@ -60,6 +60,10 @@ a {
 }
 
 @media (width <= 980px) {
+    body {
+        min-height: 90vh;
+    }
+
     main {
         grid-template-rows: auto 1fr auto 30px;
     }
